# henshin

./: .env  .envrc  .gitignore  Makefile  README.md  airflow-reference-shortcuts.md  airflow-requirements.txt  flake.nix  pyproject.toml
dag/csv_to_sql/: Makefile  dag.py  source.csv
dag/csv_to_sql/output/: .gitignore  result.csv  sample.json  update.gen.sql
dag/csv_to_sql/sql/: select.sql  update.sql
dag/libs/example_client/: client.py
